--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: hypothes<span class="brand-text">.</span>is
+title: hypothes.is
 baseurl: "/developers.hypothes.is" # the subpath of your site, e.g. /blog/
 url: "http://bigbluehat.github.io/developers.hypothes.is/" # the base hostname & protocol for your site
 
