--- a/_data/hypothesis.yml
+++ b/_data/hypothesis.yml
@@ -21,6 +21,40 @@ paths:
       responses:
         200:
           description: Describes the API
+          examples:
+            application/json: |
+              {
+                "message": "Annotator Store API",
+                "links": {
+                  "search": {
+                    "url": "https://hypothes.is/api/search",
+                    "method": "GET",
+                    "desc": "Basic search API"
+                  },
+                  "annotation": {
+                    "read": {
+                      "url": "https://hypothes.is/api/annotations/:id",
+                      "method": "GET",
+                      "desc": "Get an existing annotation"
+                    },
+                    "create": {
+                      "url": "https://hypothes.is/api/annotations",
+                      "method": "POST",
+                      "desc": "Create a new annotation"
+                    },
+                    "update": {
+                      "url": "https://hypothes.is/api/annotations/:id",
+                      "method": "PUT",
+                      "desc": "Update an existing annotation"
+                    },
+                    "delete": {
+                      "url": "https://hypothes.is/api/annotations/:id",
+                      "method": "DELETE",
+                      "desc": "Delete an annotation"
+                    }
+                  }
+                }
+              }
           schema:
             type: object
             properties:
